Enhance navbar with active section highlighting; fix typos in Experience section; adjust Contact section styling

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -74,6 +74,10 @@
     display: flex;
 }
 
+.nav_items.active {
+    color: rgb(157, 255, 0);
+    font-weight: bold;
+  }
 
 @media only screen and (max-width : 550px) {
 
