--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,1 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: "outfit", Arial, Helvetica, sans-serif;
-}
-
-body{
-    background-color: #04152d;
-    color: var(--color-text);
-}
+@import "tailwindcss";
